Add missing files

--- a/cherokee-hare.html
+++ b/cherokee-hare.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Coin Flip</title>
+    <title>Cherokee Hare</title>
 </head>
 <body>
-    <a href="index.html"><- Back to Navigation</a><br/><br/>
-    <button type="button" id="coinFlipper">Flip Coin</button>
-    <script src="./assets/javascript/coin-flip.js"></script>
+    <a href="index.html"><- Back to Navigation</a> <br /><br />
+    <script src="./assets/javascript/cherokee-hare.js"></script>
 </body>
 </html>
