--- a/change-machine.html
+++ b/change-machine.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Coin Flip</title>
+    <title>Change Machine</title>
 </head>
+
 <body>
-    <a href="index.html"><- Back to Navigation</a><br/><br/>
-    <button type="button" id="coinFlipper">Flip Coin</button>
-    <script src="./assets/javascript/coin-flip.js"></script>
+    <a href="index.html"><- Back to Navigation</a> <br /><br />
+    <script src="./assets/javascript/change-machine.js"></script>
 </body>
+
 </html>
