--- a/hangman-lite.html
+++ b/hangman-lite.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <a href="index.html"><- Back to Navigation</a><br/><br/>
-
+    Enter a letter:<input type="text" id="guess" /><br><br>
+    <button id="button">Guess</button>
     <script src="./assets/javascript/hangman-lite.js"></script>
 </body>
 </html>
