--- a/index.html
+++ b/index.html
@@ -9,4 +9,13 @@
     <li>
         <a href="hangman-lite.html">Hangman Lite</a>
     </li>
+    <li>
+        <a href="cherokee-hare.html">Cherokee Hare</a>
+    </li>
+    <li>
+        <a href="change-machine.html">Change Machine</a>
+    </li>
+    <li>
+        <a href="palindromes.html">Palindromes</a>
+    </li>
 </ul>
