--- a/hangman-lite.html
+++ b/hangman-lite.html
@@ -9,6 +9,8 @@
 <body>
     <a href="index.html"><- Back to Navigation</a><br/><br/>
     Enter a letter:<input type="text" id="guess" /><br><br>
+    <!--<input type="reset" value="Guess" id="button">-->
+    <!--onclick="document.getElementById('guess').value = ''"-->
     <button id="button">Guess</button>
     <script src="./assets/javascript/hangman-lite.js"></script>
 </body>
